Prepping for Launch

--- a/distributions.html
+++ b/distributions.html
@@ -40,24 +40,22 @@
       </div>
       <nav id="navdesktop">
         <div class="container">
-              <ul> 
+              <ul>
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
-                <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
-                <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+                <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
               </ul>
         </div>
       </nav>
     </header>
     <nav id="navmobile">
       <div class="container">
-            <ul> 
+            <ul>
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
-              <li id="navdirectory"><a href="directory.html">Directory Listing</a></li>
-              <li id="navhistory"> <a href="history.html">History & Sponsors</a></li>
+              <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
             </ul>
       </div>
     </nav>
@@ -69,20 +67,15 @@
             <h2>Contents</h2>
             <ul>
               <li><a href="#arch">Arch Linux</a></li>
-              <li><a href="#centos">CentOS</a></li>
               <li><a href="#debian">Debian</a></li>
               <li><a href="#fedora">Fedora</a></li>
               <li><a href="#gentoo">Gentoo</a></li>
               <li><a href="#ipfire">IPFire</a></li>
               <li><a href="#mint">LinuxMint</a></li>
-              <li><a href="#openbsd">OpenBSD</a></li>
-              <li><a href="#pfsense">pfSense</a></li>
-              <li><a href="#opensuse">OpenSUSE</a></li>
               <li><a href="#sabayon">Sabayon</a></li>
               <li><a href="#serenity">Serenity Linux</a></li>
               <li><a href="#slackware">Slackware</a></li>
               <li><a href="#ubuntu">Ubuntu</a></li>
-              <li><a href="#unitylinux">Unity Linux</a></li>
               <li><a href="#raspbian">Raspbian</a></li>
               <li><a href="#voidlinux">Void Linux</a></li>
               <li><a href="#parrotsec">Parrot Security OS</a></li>
@@ -95,16 +88,8 @@
               <h5>ISOs:</h5><a href="./archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
               <h5>HTTP:</h5><a href="./archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/archlinux<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.cs.pitt.edu">mirror.cs.pitt.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
-            </div>
-            <div class="distro" id="centos">
-              <h3>CentOS (Official Mirror)</h3>
-              <h5>ISOs:</h5><a href="./centos/6/isos/">http://mirror.clarkson.edu/centos/6/isos/</a><br>
-              <h5>HTTP:</h5><a href="./centos/">http://mirror.clarkson.edu/centos/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/centos<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://privatemirror.chpc.utah.edu">privatemirror.chpc.utah.edu</a><br>
-              <h5>Homepage:</h5><a href="http://www.centos.org/">http://www.centos.org/</a>
             </div>
             <div class="distro" id="debian">
               <h3>Debian</h3>
@@ -120,7 +105,7 @@
               <h5>ISOs:</h5><a href="./fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
               <h5>HTTP:</h5><a href="./fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.cs.pitt.edu">mirror.cs.pitt.edu</a><br>
               <h5>Homepage:</h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
             </div>
             <div class="distro" id="gentoo">
@@ -129,7 +114,7 @@
               <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> &<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://gentoo.cs.uni.edu">gentoo.cs.uni.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
             </div>
             <div class="distro" id="ipfire">
@@ -147,30 +132,8 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://ftp.heanet.ie">ftp.heanet.ie</a> &<a href="http://packages.linuxmint.com">packages.linuxmint.com</a> &<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a> &<a href="http://packages.linuxmint.com">packages.linuxmint.com</a> &<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
-            </div>
-            <div class="distro" id="openbsd">
-              <h3>OpenBSD</h3>
-              <h5>HTTP:</h5><a href="./openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/openbsd<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.gtlib.gatech.edu">mirror.gtlib.gatech.edu</a><br>
-              <h5>Homepage:</h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
-            </div>
-            <div class="distro" id="pfsense">
-              <h3>pfSense</h3>
-              <h5>HTTP:</h5><a href="./pfsense/">http://mirror.clarkson.edu/pfsense/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/pfsense<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://cvs.pfsense.org">cvs.pfsense.org</a><br>
-              <h5>Homepage:</h5><a href="http://www.pfsense.org/">http://www.pfsense.org/</a>
-            </div>
-            <div class="distro" id="opensuse">
-              <h3>OpenSUSE</h3>
-              <h5>ISOs:</h5><a href="./opensuse/distribution/">http://mirror.clarkson.edu/opensuse/distribution/</a><br>
-              <h5>HTTP:</h5><a href="./opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/opensuse<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://rsync.opensuse.org">rsync.opensuse.org</a><br>
-              <h5>Homepage:</h5><a href="http://www.opensuse.org/">http://www.opensuse.org/</a>
             </div>
             <div class="distro" id="sabayon">
               <h3>Sabayon (Official Mirror)</h3>
@@ -189,7 +152,7 @@
               <h3>Slackware</h3>
               <h5>HTTP:</h5><a href="./slackware/">http://mirror.clarkson.edu/slackware/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/slackware<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.gtlib.gatech.edu/">mirror.gtlib.gatech.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.cs.princeton.edu/">mirror.cs.princeton.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
             </div>
             <div class="distro" id="ubuntu">
@@ -200,13 +163,6 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
               <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> &<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
               <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
-            </div>
-            <div class="distro" id="unitylinux">
-              <h3>Unity Linux (Official Mirror)</h3>
-              <h5>HTTP:</h5><a href="./unity/">http://mirror.clarkson.edu/unity/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/unity<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://distro.ibiblio.org">distro.ibiblio.org</a><br>
-              <h5>Homepage:</h5><a href="http://unity-linux.org/">http://unity-linux.org/</a>
             </div>
             <div class="distro" id="raspbian">
               <h3>Raspbian</h3>
@@ -219,14 +175,13 @@
               <h3>Void Linux</h3>
               <h5>HTTP:</h5><a href="./VoidLinux/">http://mirror.clarkson.edu/VoidLinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/VoidLinux<br><br>
-              <h5>Upstream Mirror:</h5><br>
               <h5>Homepage:</h5><a href="http://www.voidlinux.eu/">http://www.voidlinux.eu/</a>
             </div>
             <div class="distro" id="parrotsec">
               <h3>Parrot Security OS</h3>
               <h5>HTTP:</h5><a href="./parrot/">http://mirror.clarkson.edu/parrot/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/parrot<br><br>
-              <h5>Upstream Mirror:</h5><br>
+              <h5>Upstream Mirror:</h5><a href="http://archive.parrotsec.org">archive.parrotsec.org</a><br>
               <h5>Homepage:</h5><a href="https://www.parrotsec.org/">https://www.parrotsec.org/</a>
             </div>
           </div>
