Adding more distros and packages to webpage

--- a/misc.html
+++ b/misc.html
@@ -12,8 +12,8 @@
     <meta name="description" content="The website for Clarkson University's Software Mirror">
     <script>
       window.onload = function() {
-        var foo = document.getElementById('navmisc');
-        foo.setAttribute("class", "current");
+      	var foo = document.getElementById('navmisc');
+      	foo.setAttribute("class", "current");
       };
       
     </script>
@@ -64,17 +64,17 @@
         <section>
           <h1>GNU Software (Official Mirror)</h1>
           <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
-          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/gnu<br><br>
+          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
         </section>
         <section>
           <h1>Linux (Including Kernel Source) (Not synced yet)</h1>
           <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
-          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/linux/<br><br>
+          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
@@ -88,15 +88,23 @@
         <section>
           <h1>Software (Not Linux-specific) (Not synced yet)</h1>
           <h5>HTTP:</h5><a href="./software/">http://mirror.clarkson.edu/software/</a><br>
-          <h5>Rsync:</h5> rsync://mirror.clarkson.edu/software/<br><br>
+          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/software/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://debian.lcs.mit.edu/">http://debian.lcs.mit.edu/</a><br>
-          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
+        </section>
+        <section>
+          <h1>The Document Foundation (Including LibreOffice)</h1>
+          <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
+          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
+          <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
+          <h5>Frequency of Updates:</h5>	4 times daily<br>
+          <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
         </section>
         <section>
           <h1>Isabelle (Official Mirror)</h1>
           <h5>HTTP:</h5><a href="http://mirror.clarkson.edu/isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
-          <h5>Frequency of Updates:</h5> 4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
         </section>
       </div>
