--- a/distributions.html
+++ b/distributions.html
@@ -12,8 +12,8 @@
     <meta name="description" content="The website for Clarkson University's Software Mirror">
     <script>
       window.onload = function() {
-        var foo = document.getElementById('navdistributions');
-        foo.setAttribute("class", "current");
+      	var foo = document.getElementById('navdistributions');
+      	foo.setAttribute("class", "current");
       };
       
     </script>
@@ -79,6 +79,10 @@
               <li><a href="#raspbian">Raspbian</a></li>
               <li><a href="#voidlinux">Void Linux</a></li>
               <li><a href="#parrotsec">Parrot Security OS</a></li>
+              <li><a href="#freebsd">FreeBSD</a></li>
+              <li><a href="#openbsd">OpenBSD</a></li>
+              <li><a href="#centos">CentOS</a></li>
+              <li><a href="#opensuse">OpenSUSE</a></li>
             </ul>
           </div>
           <div class="col col--3-of-4">
@@ -97,7 +101,7 @@
               <h5>HTTP:</h5><a href="./debian/">http://mirror.clarkson.edu/debian/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian-cd<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian<br><br>
-              <h5>Upstream Mirrors:</h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a> &<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Upstream Mirrors:</h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a>	&<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
               <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
             <div class="distro" id="fedora">
@@ -111,7 +115,7 @@
             <div class="distro" id="gentoo">
               <h3>Gentoo</h3>
               <h5>ISOs:</h5><a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
-              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> &<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
+              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	&<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
               <h5>Upstream Mirror:</h5><a href="http://gentoo.cs.uni.edu">gentoo.cs.uni.edu</a><br>
@@ -132,7 +136,7 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a> &<a href="http://packages.linuxmint.com">packages.linuxmint.com</a> &<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&<a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
             <div class="distro" id="sabayon">
@@ -156,12 +160,12 @@
               <h5>Homepage:</h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
             </div>
             <div class="distro" id="ubuntu">
-              <h3>Ubutnu (Official Mirror)</h3>
+              <h3>Ubuntu (Official Mirror)</h3>
               <h5>ISOs:</h5><a href="./ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
               <h5>HTTP:</h5><a href="./ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a> &<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a>	&<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
               <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
             <div class="distro" id="raspbian">
@@ -173,8 +177,8 @@
             </div>
             <div class="distro" id="voidlinux">
               <h3>Void Linux</h3>
-              <h5>HTTP:</h5><a href="./VoidLinux/">http://mirror.clarkson.edu/VoidLinux/</a><br>
-              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/VoidLinux<br><br>
+              <h5>HTTP:</h5><a href="./voidlinux/">http://mirror.clarkson.edu/voidlinux/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/voidlinux<br><br>
               <h5>Homepage:</h5><a href="http://www.voidlinux.eu/">http://www.voidlinux.eu/</a>
             </div>
             <div class="distro" id="parrotsec">
@@ -183,6 +187,34 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/parrot<br><br>
               <h5>Upstream Mirror:</h5><a href="http://archive.parrotsec.org">archive.parrotsec.org</a><br>
               <h5>Homepage:</h5><a href="https://www.parrotsec.org/">https://www.parrotsec.org/</a>
+            </div>
+            <div class="distro" id="freebsd">
+              <h3>FreeBSD</h3>
+              <h5>HTTP:</h5><a href="./freebsd/">http://mirror.clarkson.edu/freebsd/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/freebsd<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://ftp2.de.freebsd.org">ftp2.de.freebsd.org</a><br>
+              <h5>Homepage:</h5><a href="https://www.freebsd.org/">https://www.freebsd.org/</a>
+            </div>
+            <div class="distro" id="openbsd">
+              <h3>OpenBSD</h3>
+              <h5>HTTP:</h5><a href="./openbsd/">http://mirror.clarkson.edu/openbsd/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/openbsd<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.nycbug.org">mirrors.nycbug.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
+            </div>
+            <div class="distro" id="centos">
+              <h3>CentOS</h3>
+              <h5>HTTP:</h5><a href="./centos/">http://mirror.clarkson.edu/centos/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/centos<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.es.its.nyu.edu">mirror.es.its.nyu.edu</a><br>
+              <h5>Homepage:</h5><a href="https://www.centos.org/">https://www.centos.org/</a>
+            </div>
+            <div class="distro" id="opensuse">
+              <h3>OpenSUSE</h3>
+              <h5>HTTP:</h5><a href="./opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/opensuse<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://stage.opensuse.org">stage.opensuse.org</a><br>
+              <h5>Homepage:</h5><a href="https://www.opensuse.org/">https://www.opensuse.org/</a>
             </div>
           </div>
         </div>
