Updating to add cygwin onto page

--- a/misc.html
+++ b/misc.html
@@ -70,7 +70,7 @@
           <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
         </section>
         <section>
-          <h1>Linux (Including Kernel Source) (Not synced yet)</h1>
+          <h1>Linux (Including Kernel Source)</h1>
           <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
@@ -79,19 +79,11 @@
         </section>
         <section>
           <h1>Extra Packages for Enterprise Linux (EPEL) (Official Mirror)</h1>
-          <h5>HTTP:</h5><a href="./epel/">http:://mirror.clarkson.edu/epel/</a><br>
+          <h5>HTTP:</h5><a href="./fedora-epel/">http:://mirror.clarkson.edu/fedora-epel/</a><br>
           <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
           <h5>Frequency of Updates:</h5>4 times Daily<br>
           <h5>Homepage:</h5><a href="http://fedoraproject.org/wiki/EPEL">http://fedoraproject.org/wiki/EPEL</a>
-        </section>
-        <section>
-          <h1>Software (Not Linux-specific) (Not synced yet)</h1>
-          <h5>HTTP:</h5><a href="./software/">http://mirror.clarkson.edu/software/</a><br>
-          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/software/<br><br>
-          <h5>Upstream Mirror:</h5><a href="http://debian.lcs.mit.edu/">http://debian.lcs.mit.edu/</a><br>
-          <h5>Frequency of Updates:</h5>	4 times Daily<br>
-          <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
           <h1>The Document Foundation (Including LibreOffice)</h1>
@@ -102,8 +94,14 @@
           <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
         </section>
         <section>
+          <h1>Cygwin</h1>
+          <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
+          <h5>Frequency of Updates:</h5>4 times Daily<br>
+          <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
+        </section>
+        <section>
           <h1>Isabelle (Official Mirror)</h1>
-          <h5>HTTP:</h5><a href="http://mirror.clarkson.edu/isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
+          <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
           <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
         </section>
