--- a/history.html
+++ b/history.html
@@ -44,6 +44,7 @@
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
+                <li id="navstats"><a href="stats.html">Statistics</a></li>
                 <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
               </ul>
         </div>
@@ -55,6 +56,7 @@
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
+              <li id="navstats"><a href="stats.html">Statistics</a></li>
               <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
             </ul>
       </div>
