--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
                 <li id="navmisc"><a href="misc.html">Misc.</a></li>
+                <li id="navstats"><a href="stats.html">Statistics</a></li>
                 <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
               </ul>
         </div>
@@ -54,6 +55,7 @@
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
               <li id="navmisc"><a href="misc.html">Misc.</a></li>
+              <li id="navstats"><a href="stats.html">Statistics</a></li>
               <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
             </ul>
       </div>
