--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Clarkson University Mirror - Directory</title>
+    <title>Clarkson University Mirror - Statistics</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/vendors/jquery-2.1.4.min.js"></script>
@@ -12,8 +12,8 @@
     <meta name="description" content="The website for Clarkson University's Software Mirror">
     <script>
       window.onload = function() {
-        var foo = document.getElementById('navdirectory');
-        foo.setAttribute("class", "current");
+      	var foo = document.getElementById('navstats');
+      	foo.setAttribute("class", "current");
       };
       
     </script>
@@ -61,6 +61,12 @@
             </ul>
       </div>
     </nav>
+    <div class="content">
+      <div class="container">
+        <h1>Statistics</h1>
+        <p>This page includes statistics on the traffic (up and down) of Mirror</p><img class="statImg" src="img/vnstati-sum.png"><img class="statImg" src="img/vnstati-month.png"><img class="statImg" src="img/vnstati-day.png"><img class="statImg" src="img/vnstati-hour.png">
+      </div>
+    </div>
     <footer>
       <div class="container">
         <div class="row">
