--- a/distributions.html
+++ b/distributions.html
@@ -226,7 +226,7 @@
       <div class="container">
         <div class="row">
           <div class="col col--2-of-4">
-            <h3> <a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
+            <h3><a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
             <h3>Clarkson University | Science Center 336</h3>
           </div>
           <div class="col col--2-of-4">
@@ -236,7 +236,8 @@
         </div>
         <div class="row">
           <div class="col col--1-of-3 col--push-1-of-3">
-            <p>Main design by Benjamin Lannon</p>
+            <p>Design by Benjamin Lannon</p>
+            <p><i class="fa fa-github"><a href="https://github.com/COSI-Lab/Mirror2016"> Github Repo</a></i></p>
           </div>
         </div>
       </div>
