--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="row">
           <div class="col col--1-of-3 col--push-1-of-3">
             <p>Design by Benjamin Lannon</p>
-            <p><i class="fa fa-github"><a href="https://github.com/COSI-Lab/Mirror2016"> Github Repo</a></i></p>
+            <p><i class="fa fa-github"></i><a href="https://github.com/COSI-Lab/Mirror2016">Github Repo</a></p>
           </div>
         </div>
       </div>
