--- a/misc.html
+++ b/misc.html
@@ -64,7 +64,8 @@
     <div class="content">
       <div class="container">
         <section>
-          <h1>GNU Software (Official Mirror)</h1>
+          <h1>Misc. Software</h1>
+          <h3>GNU Software (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
@@ -72,7 +73,7 @@
           <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
         </section>
         <section>
-          <h1>Linux (Including Kernel Source)</h1>
+          <h3>Linux (Including Kernel Source)</h3>
           <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
@@ -80,7 +81,7 @@
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
-          <h1>Extra Packages for Enterprise Linux (EPEL) (Official Mirror)</h1>
+          <h3>Extra Packages for Enterprise Linux (EPEL) (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./fedora-epel/">http:://mirror.clarkson.edu/fedora-epel/</a><br>
           <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
@@ -88,7 +89,7 @@
           <h5>Homepage:</h5><a href="http://fedoraproject.org/wiki/EPEL">http://fedoraproject.org/wiki/EPEL</a>
         </section>
         <section>
-          <h1>The Document Foundation (Including LibreOffice)</h1>
+          <h3>The Document Foundation (Including LibreOffice)</h3>
           <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
@@ -96,13 +97,13 @@
           <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
         </section>
         <section>
-          <h1>Cygwin</h1>
+          <h3>Cygwin</h3>
           <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
           <h5>Frequency of Updates:</h5>4 times Daily<br>
           <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
         </section>
         <section>
-          <h1>Isabelle (Official Mirror)</h1>
+          <h3>Isabelle (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
           <h5>Frequency of Updates:</h5>	4 times Daily<br>
           <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
@@ -124,7 +125,7 @@
         <div class="row">
           <div class="col col--1-of-3 col--push-1-of-3">
             <p>Design by Benjamin Lannon</p>
-            <p><i class="fa fa-github"><a href="https://github.com/COSI-Lab/Mirror2016"> Github Repo</a></i></p>
+            <p><i class="fa fa-github"></i><a href="https://github.com/COSI-Lab/Mirror2016">Github Repo</a></p>
           </div>
         </div>
       </div>
