Adding Alpine Linux

--- a/distributions.html
+++ b/distributions.html
@@ -68,6 +68,7 @@
           <div class="col col--1-of-4 distro-contents">
             <h2>Contents</h2>
             <ul>
+              <li><a href="#alpine">Alpine Linux</a></li>
               <li><a href="#arch">Arch Linux</a></li>
               <li><a href="#centos">CentOS</a></li>
               <li><a href="#debian">Debian</a></li>
@@ -89,13 +90,19 @@
           </div>
           <div class="col col--3-of-4">
             <h5>Note:</h5>All distros are updated 4 times daily unless said otherwise.
+            <div class="distro" id="alpine">
+              <h3>Alpine Linux</h3>
+              <h5>HTTP:</h5><a href="./alpine/">http://mirror.clarkson.edu/alpine/</a><br><br>
+              <h5>Upstream Mirror</h5><a href="rsync://rsync.alpinelinux.org">rsync://rsync.alpinelinux.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.alpinelinux.org/">http://www.alpinelinux.org/</a>
+            </div>
             <div class="distro" id="arch">
               <h3>Arch Linux</h3>
               <h5>ISOs:</h5><a href="./archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
               <h5>HTTP:</h5><a href="./archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/archlinux<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirror.cs.pitt.edu">mirror.cs.pitt.edu</a><br>
-              <h5>Homepage:</h5><a href="http://www.archilinux.org/">http://www.archilinux.org/</a>
+              <h5>Homepage:</h5><a href="http://www.archlinux.org/">http://www.archlinux.org/</a>
             </div>
             <div class="distro" id="debian">
               <h3>Debian</h3>
