Fixing a css error bug due to a property being overriden

--- a/stats.html
+++ b/stats.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Clarkson University Mirror - Statistics</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/vendors/jquery-2.1.4.min.js"></script>
     <script src="js/main.js"></script>
     <meta name="theme-color" content="#035245">
@@ -64,7 +64,7 @@
     <div class="content">
       <div class="container">
         <h1>Statistics</h1>
-        <p>This page includes statistics on the traffic (up and down) of Mirror</p><img class="statImg" src="img/vnstati-sum.png"><img class="statImg" src="img/vnstati-month.png"><img class="statImg" src="img/vnstati-day.png"><img class="statImg" src="img/vnstati-hour.png">
+        <p>This page includes statistics on the traffic (up and down) of Mirror</p><img class="stat-img" src="img/vnstati-sum.png"><img class="stat-img" src="img/vnstati-month.png"><img class="stat-img" src="img/vnstati-day.png"><img class="stat-img" src="img/vnstati-hour.png">
       </div>
     </div>
     <footer>
