--- a/distributions.html
+++ b/distributions.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Clarkson University Mirror - Distributions</title>
+    <script src="js/vendors/webcomponents.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/vendors/jquery-2.1.4.min.js"></script>
@@ -10,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="The website for Clarkson University's Software Mirror">
+    <link rel="import" href="components/cosi-nav.html">
     <script>
       window.onload = function() {
       	var foo = document.getElementById('navdistributions');
@@ -19,21 +21,7 @@
     </script>
   </head>
   <body>
-    <div class="navlinks">
-      <ul> 
-        <li><a href="http://cosi.clarkson.edu">CSLabs Homepage</a></li>
-        <li><a href="https://dubsdot.cosi.clarkson.edu">DubsDot</a></li>
-        <li><a href="http://docs.cosi.clarkson.edu">Docs</a></li>
-        <li><a href="http://print.cosi.clarkson.edu">Print</a></li>
-        <li><a href="http://mirror.clarkson.edu">Mirror</a></li>
-        <li><a href="http://fsuvius.cosi.clarkson.edu">Fsuvius</a></li>
-        <li><a href="http://talks.cosi.clarkson.edu">Talks</a></li>
-        <li><a href="http://cosi-lab.github.io/meeting-minutes">Meeting Minutes</a></li>
-        <li><a href="http://cosi-lab.github.io/project-updates">Project Updates</a></li>
-        <li><a href="http://moodle.cosi.clarkson.edu">COSI Moodle</a></li>
-        <li><a href="http://management.cosi.clarkson.edu">Management</a></li>
-      </ul>
-    </div>
+    <cosi-nav></cosi-nav>
     <header>
       <div class="container top-header"><a href="http://clarkson.edu/"><img src="img/clarksonlogo.jpg"></a>
         <h1 class="left"><a href="index.html">Mirror</a></h1><i class="fa fa-bars menu-button"></i>
