Added CTAN to misc. page

--- a/misc.html
+++ b/misc.html
@@ -57,7 +57,7 @@
           <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	6 times Daily<br>
           <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
         </section>
         <section>
@@ -65,7 +65,7 @@
           <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	6 times Daily<br>
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
@@ -73,7 +73,7 @@
           <h5>HTTP:</h5><a href="./fedora-epel/">http:://mirror.clarkson.edu/fedora-epel/</a><br>
           <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
-          <h5>Frequency of Updates:</h5>4 times Daily<br>
+          <h5>Frequency of Updates:</h5>6 times Daily<br>
           <h5>Homepage:</h5><a href="http://fedoraproject.org/wiki/EPEL">http://fedoraproject.org/wiki/EPEL</a>
         </section>
         <section>
@@ -81,19 +81,25 @@
           <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
-          <h5>Frequency of Updates:</h5>	4 times daily<br>
+          <h5>Frequency of Updates:</h5>	6 times daily<br>
           <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
+        </section>
+        <section>
+          <h3>CTAN</h3>
+          <h5>HTTP:</h5><a href="./ctan/">http://mirror.clarkson.edu/ctan/</a><br>
+          <h5>Frequency of Updates</h5>6 times Daily<br>
+          <h5>Homepage:</h5><a href="http://www.ctan.org/">http://www.ctan.org/</a>
         </section>
         <section>
           <h3>Cygwin</h3>
           <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
-          <h5>Frequency of Updates:</h5>4 times Daily<br>
+          <h5>Frequency of Updates:</h5>6 times Daily<br>
           <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
         </section>
         <section>
           <h3>Isabelle (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
-          <h5>Frequency of Updates:</h5>	4 times Daily<br>
+          <h5>Frequency of Updates:</h5>	6 times Daily<br>
           <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
         </section>
       </div>
