Adding Ubuntu Flavour ISOs

--- a/distributions.html
+++ b/distributions.html
@@ -201,6 +201,7 @@
             <div class="distro" id="ubuntu">
               <h3>Ubuntu (Official Mirror)</h3>
               <h5>ISOs:</h5><a href="./ubuntu-releases/">http://mirror.clarkson.edu/ubuntu-releases/</a><br>
+              <h5>Flavour ISOs: (Kubuntu, Xubuntu, Mate, etc.)</h5><a href="./ubuntu-cdimage/">http://mirror.clarkson.edu/ubuntu-cdimage/</a>
               <h5>HTTP:</h5><a href="./ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
