--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <ul>
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="navmisc"><a href="misc.html">Misc.</a></li>
+                <li id="navsoft"><a href="software.html">Software</a></li>
                 <li id="navstats"><a href="stats.html">Statistics</a></li>
                 <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
               </ul>
@@ -41,7 +41,7 @@
             <ul>
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="navmisc"><a href="misc.html">Misc.</a></li>
+              <li id="navsoft"><a href="software.html">Software</a></li>
               <li id="navstats"><a href="stats.html">Statistics</a></li>
               <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
             </ul>
