--- a/software.html
+++ b/software.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Clarkson University Mirror - Misc.</title>
+    <title>Clarkson University Mirror - Software</title>
     <script src="js/vendors/webcomponents.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -14,7 +14,7 @@
     <link rel="import" href="components/cosi-nav.html">
     <script>
       window.onload = function() {
-      	var foo = document.getElementById('navmisc');
+      	var foo = document.getElementById('navsoft');
       	foo.setAttribute("class", "current");
       };
       
@@ -31,7 +31,7 @@
               <ul>
                 <li id="navhome"><a href="index.html">Mirror Home</a></li>
                 <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-                <li id="navmisc"><a href="misc.html">Misc.</a></li>
+                <li id="navsoft"><a href="software.html">Software</a></li>
                 <li id="navstats"><a href="stats.html">Statistics</a></li>
                 <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
               </ul>
@@ -43,7 +43,7 @@
             <ul>
               <li id="navhome"><a href="index.html">Mirror Home</a></li>
               <li id="navdistributions"><a href="distributions.html">Distributions</a></li>
-              <li id="navmisc"><a href="misc.html">Misc.</a></li>
+              <li id="navsoft"><a href="software.html">Software</a></li>
               <li id="navstats"><a href="stats.html">Statistics</a></li>
               <li id="navhistory"><a href="history.html">History & Sponsors</a></li>
             </ul>
@@ -52,12 +52,12 @@
     <div class="content">
       <div class="container">
         <section>
-          <h1>Misc. Software</h1>
+          <h1>Other Software</h1>
           <h3>GNU Software (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	6 times Daily<br>
+          <h5>Frequency of Updates:</h5>	2 times Daily<br>
           <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
         </section>
         <section>
@@ -65,11 +65,11 @@
           <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	6 times Daily<br>
+          <h5>Frequency of Updates:</h5>	2 times Daily<br>
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
-          <h3>Extra Packages for Enterprise Linux (EPEL) (Official Mirror)</h3>
+          <h3>Extra Packages for Enterprise Linux (EPEL)</h3>
           <h5>HTTP:</h5><a href="./fedora-epel/">http:://mirror.clarkson.edu/fedora-epel/</a><br>
           <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
@@ -81,25 +81,37 @@
           <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
           <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
           <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
-          <h5>Frequency of Updates:</h5>	6 times daily<br>
+          <h5>Frequency of Updates:</h5>	4 times daily<br>
           <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
         </section>
         <section>
           <h3>CTAN</h3>
           <h5>HTTP:</h5><a href="./ctan/">http://mirror.clarkson.edu/ctan/</a><br>
-          <h5>Frequency of Updates</h5>6 times Daily<br>
-          <h5>Homepage:</h5><a href="http://www.ctan.org/">http://www.ctan.org/</a>
+          <h5>Frequency of Updates</h5>2 times Daily<br>
+          <h5>Homepage:</h5><a href="http://ctan.org/">http://www.ctan.org/</a>
+        </section>
+        <section>
+          <h3>CPAN</h3>
+          <h5>HTTP:</h5><a href="./cpan/">http://mirror.clarkson.edu/cpan/</a><br>
+          <h5>Frequency of Updates</h5>2 times Daily<br>
+          <h5>Homepage:</h5><a href="http://cpan.org/">http://www.cpan.org/</a>
+        </section>
+        <section>
+          <h3>CRAN</h3>
+          <h5>HTTP:</h5><a href="./cran/">http://mirror.clarkson.edu/cran/</a><br>
+          <h5>Frequency of Updates</h5>2 times Daily<br>
+          <h5>Homepage:</h5><a href="http://cran.r-project.org/">http://cran.r-project.org/</a>
         </section>
         <section>
           <h3>Cygwin</h3>
           <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
-          <h5>Frequency of Updates:</h5>6 times Daily<br>
+          <h5>Frequency of Updates:</h5>2 times Daily<br>
           <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
         </section>
         <section>
           <h3>Isabelle (Official Mirror)</h3>
           <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
-          <h5>Frequency of Updates:</h5>	6 times Daily<br>
+          <h5>Frequency of Updates:</h5>	2 times Daily<br>
           <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
         </section>
       </div>
