Tweaking a few pages and styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <hr>
         <div class="row mid">
-          <div class="col col--1-of-3"><img src="img/debian_logo.svg">
+          <div class="col col--1-of-3"><a href="distributions.html"><img src="img/debian_logo.svg"></a>
             <h2>Linux Distros</h2>
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
@@ -76,16 +76,16 @@
               day from upstream mirrors. Learn more on the <a href="distributions.html">Distributions</a> page.
             </p>
           </div>
-          <div class="col col--1-of-3"><img src="img/gnu.svg">
+          <div class="col col--1-of-3"><a href="./gnu"><img src="img/gnu.svg"></a>
             <h2>GNU Software</h2>
             <p>
               We also host a large quantity of software maintained by the GNU Project. you can
-              find it on the <a href="misc.html">Misc.</a> page.
+              find it on the <a href="software.html">Software</a> page.
             </p>
           </div>
-          <div class="col col--1-of-3"><img src="img/tux.png">
+          <div class="col col--1-of-3"><a href="./linux"><img src="img/tux.png"></a>
             <h2>Linux Kernel</h2>
-            <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="misc.html">Misc.</a>
+            <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="software.html">Software</a>
               page, found in the same place is documentation and souce for the kernel.
               
             </p>
