--- a/software.html
+++ b/software.html
@@ -103,6 +103,12 @@
           <h5>Homepage:</h5><a href="http://cran.r-project.org/">http://cran.r-project.org/</a>
         </section>
         <section>
+          <h3>Clonezilla</h3>
+          <h5>HTTP:</h5><a href="./clonezilla/">http://mirror.clarkson.edu/clonezilla/</a><br>
+          <h5>Frequency of Updates</h5>1 time daily<br>
+          <h5>Homepage:</h5><a href="http://clonezilla.org/">http://clonezilla.org/</a>
+        </section>
+        <section>
           <h3>Cygwin</h3>
           <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
           <h5>Frequency of Updates:</h5>2 times Daily<br>
