Moved a few mirrors to use RIT as upstream and added Debian Security and Manjaro

--- a/distributions.html
+++ b/distributions.html
@@ -65,6 +65,7 @@
               <li><a href="#gentoo">Gentoo</a></li>
               <li><a href="#ipfire">IPFire</a></li>
               <li><a href="#mint">LinuxMint</a></li>
+              <li><a href="#manjaro">Manjaro Linux</a></li>
               <li><a href="#openbsd">OpenBSD</a></li>
               <li><a href="#opensuse">OpenSUSE</a></li>
               <li><a href="#parrotsec">Parrot Security OS</a></li>
@@ -88,23 +89,24 @@
               <h5>ISOs:</h5><a href="./archlinux/iso/latest/">http://mirror.clarkson.edu/archlinux/iso/latest/</a><br>
               <h5>HTTP:</h5><a href="./archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/archlinux<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.cs.pitt.edu">mirror.cs.pitt.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.archlinux.org/">http://www.archlinux.org/</a>
             </div>
             <div class="distro" id="centos">
               <h3>CentOS</h3>
               <h5>HTTP:</h5><a href="./centos/">http://mirror.clarkson.edu/centos/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/centos<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.es.its.nyu.edu">mirror.es.its.nyu.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage:</h5><a href="https://www.centos.org/">https://www.centos.org/</a>
             </div>
             <div class="distro" id="debian">
               <h3>Debian</h3>
               <h5>ISOs:</h5><a href="./debian-cd/">http://mirror.clarkson.edu/debian-cd/</a><br>
               <h5>HTTP:</h5><a href="./debian/">http://mirror.clarkson.edu/debian/</a><br>
+              <h5>Security Updates:</h5><a href="./debian-security/">http://mirror.clarkson.edu/debian-security/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian-cd<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian<br><br>
-              <h5>Upstream Mirrors:</h5><a href="http://ftp.us.debian.org">ftp.us.debian.org</a>	&<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Upstream Mirrors:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a>	&<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
               <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
             <div class="distro" id="fedora">
@@ -112,7 +114,7 @@
               <h5>ISOs:</h5><a href="./fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
               <h5>HTTP:</h5><a href="./fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.cs.pitt.edu">mirror.cs.pitt.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage:</h5><a href="http://fedoraproject.org/">http://fedoraproject.org/</a>
             </div>
             <div class="distro" id="freebsd">
@@ -128,7 +130,7 @@
               <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	&<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://gentoo.cs.uni.edu">gentoo.cs.uni.edu</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.gentoo.org/">http://www.gentoo.org/</a>
             </div>
             <div class="distro" id="ipfire">
@@ -148,6 +150,13 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&<a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
+            </div>
+            <div class="distro" id="manjaro">
+              <h3>Manjaro Linux</h3>
+              <h5>HTTP:</h5><a href="./manjaro/">http://mirror.clarkson.edu/manjaro/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/manjaro<br><br>
+              <h5>Upstream Mirror</h5><a href="http://ftp.halifax.rwth-aachen.de">ftp.halifax.rwth-aachen.de</a><br>
+              <h5>Homepage:</h5><a href="https://manjaro.github.io/">https://manjaro.github.io/</a>
             </div>
             <div class="distro" id="openbsd">
               <h3>OpenBSD</h3>
