Aligning distros to properly say which are official currently

--- a/distributions.html
+++ b/distributions.html
@@ -110,7 +110,7 @@
               <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
             <div class="distro" id="fedora">
-              <h3>Fedora (Official Mirror)</h3>
+              <h3>Fedora</h3>
               <h5>ISOs:</h5><a href="./fedora/linux/releases/">http://mirror.clarkson.edu/fedora/linux/releases/</a><br>
               <h5>HTTP:</h5><a href="./fedora/linux/">http://mirror.clarkson.edu/fedora/linux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora<br><br>
@@ -166,14 +166,14 @@
               <h5>Homepage:</h5><a href="http://www.openbsd.org/">http://www.openbsd.org/</a>
             </div>
             <div class="distro" id="opensuse">
-              <h3>OpenSUSE</h3>
+              <h3>OpenSUSE (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./opensuse/">http://mirror.clarkson.edu/opensuse/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/opensuse<br><br>
               <h5>Upstream Mirror:</h5><a href="http://stage.opensuse.org">stage.opensuse.org</a><br>
               <h5>Homepage:</h5><a href="https://www.opensuse.org/">https://www.opensuse.org/</a>
             </div>
             <div class="distro" id="parrotsec">
-              <h3>Parrot Security OS</h3>
+              <h3>Parrot Security OS (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./parrot/">http://mirror.clarkson.edu/parrot/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/parrot<br><br>
               <h5>Upstream Mirror:</h5><a href="http://archive.parrotsec.org">archive.parrotsec.org</a><br>
@@ -217,7 +217,7 @@
               <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
             <div class="distro" id="voidlinux">
-              <h3>Void Linux</h3>
+              <h3>Void Linux (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./voidlinux/">http://mirror.clarkson.edu/voidlinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/voidlinux<br><br>
               <h5>Homepage:</h5><a href="http://www.voidlinux.eu/">http://www.voidlinux.eu/</a>
