--- a/distributions.html
+++ b/distributions.html
@@ -73,6 +73,7 @@
               <li><a href="#sabayon">Sabayon</a></li>
               <li><a href="#serenity">Serenity Linux</a></li>
               <li><a href="#slackware">Slackware</a></li>
+              <li><a href="#slitaz">SliTaz Linux</a></li>
               <li><a href="#ubuntu">Ubuntu</a></li>
               <li><a href="#voidlinux">Void Linux</a></li>
             </ul>
@@ -205,6 +206,13 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/slackware<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirror.cs.princeton.edu/">mirror.cs.princeton.edu</a><br>
               <h5>Homepage:</h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
+            </div>
+            <div class="distro" id="slitaz">
+              <h3>SliTaz Linux</h3>
+              <h5>HTTP:</h5><a href="./slitaz/">http://mirror.clarkson.edu/slitaz</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/slitaz<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror1.slitaz.org/">mirror1.slitaz.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.slitaz.org/en/">http://www.slitaz.org/en/</a>
             </div>
             <div class="distro" id="ubuntu">
               <h3>Ubuntu (Official Mirror)</h3>
